--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,16 @@
     <string name="standart_note">参考音:C</string>
     <string name="ear_label">练耳</string>
     <string name="ear_note">音阶听辨</string>
-    <string name="ear_interval">单程听辨</string>
+    <string name="ear_interval">音程听辨</string>
     <string name="identify_label">辨识</string>
     <string name="identify_note">音阶辨识</string>
     <string name="identify_interval">音程辨识</string>
     <string name="notice_label">温馨提示：点击上方俩大按钮可多次播放哈~</string>
+    <string name="settings_label">音域设置:</string>
+    <string name="sp_hint">请选择音域</string>
+    <string name="notice_range_label">提示：会随机从您设置的音域里选音阶播放。</string>
+    <string name="tv_select_hint">请从12个音阶中选择</string>
+    <string name="notice_select_label">提示：仅播放您选择的音阶</string>
+    <string name="select_note_label">音阶选择:</string>
 
 </resources>
