5、添加音阶限制、音域限制

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,102 @@
     <string name="sp_hint">请选择音域</string>
     <string name="notice_range_label">提示：会随机从您设置的音域里选音阶播放。</string>
     <string name="tv_select_hint">请从12个音阶中选择</string>
-    <string name="notice_select_label">提示：仅播放您选择的音阶</string>
+    <string name="notice_select_label">提示：仅播放您选择的音阶(可多选)</string>
     <string name="select_note_label">音阶选择:</string>
 
+    <array name="note_array">
+        <!--大字一组-->
+        <item>C1</item>
+        <item>C#1</item>
+        <item>D1</item>
+        <item>D#1</item>
+        <item>E1</item>
+        <item>F1</item>
+        <item>F#1</item>
+        <item>G1</item>
+        <item>G#1</item>
+        <item>A1</item>
+        <item>A#1</item>
+        <item>B1</item>
+        <!--大字组-->
+        <!--<item>C</item>
+        <item>C#</item>
+        <item>D</item>
+        <item>D#</item>
+        <item>E</item>
+        <item>F</item>
+        <item>F#</item>
+        <item>G</item>
+        <item>G#</item>
+        <item>A</item>
+        <item>A#</item>
+        <item>B</item>
+        &lt;!&ndash;小字组&ndash;&gt;
+        <item>c</item>
+        <item>c#</item>
+        <item>d</item>
+        <item>d#</item>
+        <item>e</item>
+        <item>f</item>
+        <item>f#</item>
+        <item>g</item>
+        <item>g#</item>
+        <item>a</item>
+        <item>a#</item>
+        <item>b</item>-->
+        <!--小字1组-->
+        <item>c1</item>
+        <item>c1#</item>
+        <item>d1</item>
+        <item>d1#</item>
+        <item>e1</item>
+        <item>f1</item>
+        <item>f1#</item>
+        <item>g1</item>
+        <item>g1#</item>
+        <item>a1</item>
+        <item>a1#</item>
+        <item>b1</item>
+        <!--小字2组-->
+        <item>c2</item>
+        <item>c2#</item>
+        <item>d2</item>
+        <item>d2#</item>
+        <item>e2</item>
+        <item>f2</item>
+        <item>f2#</item>
+        <item>g2</item>
+        <item>g2#</item>
+        <item>a2</item>
+        <!--<item>a2#</item>
+        <item>b2</item>-->
+        <!--小字3组-->
+        <!--<item>c3</item>
+        <item>c3#</item>
+        <item>d3</item>
+        <item>d3#</item>
+        <item>e3</item>
+        <item>f3</item>
+        <item>f3#</item>
+        <item>g3</item>
+        <item>g3#</item>
+        <item>a3</item>
+        <item>a3#</item>
+        <item>b3</item>-->
+        <!--小字4组-->
+        <!--<item>c4</item>
+        <item>c4#</item>
+        <item>d4</item>
+        <item>d4#</item>
+        <item>e4</item>
+        <item>f4</item>
+        <item>f4#</item>
+        <item>g4</item>
+        <item>g4#</item>
+        <item>a4</item>
+        <item>a4#</item>
+        <item>b4</item>-->
+        <!--小字5组-->
+        <!--<item>c5</item>-->
+    </array>
 </resources>
