--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
         <item>A#1</item>
         <item>B1</item>
         <!--大字组-->
-        <!--<item>C</item>
+        <item>C</item>
         <item>C#</item>
         <item>D</item>
         <item>D#</item>
@@ -60,14 +60,14 @@
         <item>A</item>
         <item>A#</item>
         <item>B</item>
-        &lt;!&ndash;小字组&ndash;&gt;
+        <!--小字组-->
         <item>c</item>
         <item>c#</item>
         <item>d</item>
         <item>d#</item>
         <item>e</item>
         <item>f</item>
-        <item>f#</item>
+        <!--<item>f#</item>
         <item>g</item>
         <item>g#</item>
         <item>a</item>
